--- a/css/custom.css
+++ b/css/custom.css
@@ -36,3 +36,13 @@
 .nav-pills .show > .nav-link {
   background: #198754 !important;
 }
+
+.solutions {
+  width: 100%;
+  height: 100vh;
+  background: url("../img/fun-facts-bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
